修复Linux/Unix中清空控制台